[tool.poetry]
name = "research-paper-companion"
version = "0.1.0"
description = ""
authors = ["Arijit De <arijitde2050@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
pypdf2 = "^3.0.1"
langchain = "^0.0.338"
openai = "^1.3.3"
deeplake = "^3.8.6"
quart-uploads = "^0.0.1"
werkzeug = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
